Creado mediante Colaboratory

--- a/Arboles_Binarios/Arboles_Binarios.ipynb
+++ b/Arboles_Binarios/Arboles_Binarios.ipynb
@@ -6,7 +6,7 @@
       "name": "Arboles Binarios.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMaxeXwg2s+AO/a07owgZB9",
+      "authorship_tag": "ABX9TyNatipgjegATGt0yKgxvEPR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,7 +25,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/jugernaut/ManejoDatos/blob/main/Arboles_Binarios.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/jugernaut/ManejoDatos/blob/main/Arboles_Binarios/Arboles_Binarios.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -49,13 +49,13 @@
       },
       "source": [
         "##Introducción \n",
-        "Los árboles binarios son una estructura de datos de gran ayuda para las ciencias en general, pero es fundamental en lo que a las ciencias de la computación se refiere.\n",
+        "Los árboles binarios son una $\\color{blue}{estructura\\,de\\,datos}$ de gran ayuda para las ciencias en general, pero es fundamental en lo que a las ciencias de la computación se refiere.\n",
         "\n",
         "Esta estructura surge de manera recurrente en áreas como, teoría de gráficas, inteligencia artificial, bases de datos, sistemas operativos, topología de redes y muchas otras.\n",
         "\n",
         "De igual manera que con los algoritmos vistos previamente los arboles binarios permiten almacenar el tipo de información que sea necesaria, desde simples valores numéricos, hasta información mas compleja.\n",
         "\n",
-        "Como toda estructura de datos (arreglos, listas, pilas, etc), los arboles binarios están conformados principalmente por 2 elementos que los caracterizan: el tipo de dato que almacenan y las operaciones que se pueden realizar."
+        "Como toda estructura de datos (arreglos, listas, pilas, etc), los arboles binarios están conformados principalmente por 2 elementos que los caracterizan: el $\\color{red}{tipo\\,de\\, dato}$ que almacenan y las $\\color{red}{operaciones}$ que se pueden realizar."
       ]
     },
     {
@@ -130,7 +130,7 @@
         "id": "HndwGQluu_G_"
       },
       "source": [
-        "**Cada nodo pertenece a un nivel**, comenzando por la **raíz cuyo nivel es cero**. Los hijos directos de la raíz pertenecen al nivel 1 o dicho en otras palabras, pertenecen a un nivel mas que el de su padre. **¿Puedes dar una definición recursiva para esta función?.**"
+        "**Cada nodo pertenece a un nivel**, comenzando por la **raíz cuyo nivel es cero**. Los hijos directos de la raíz pertenecen al nivel 1 o dicho en otras palabras, pertenecen a un nivel mas que el de su padre. $\\color{red}{¿Puedes\\,dar\\,una\\,definici\\acute{o}n\\,recursiva\\,para\\,esta\\,funci\\acute{o}n?}.$"
       ]
     },
     {
@@ -139,8 +139,7 @@
         "id": "037oxfp7vX_J"
       },
       "source": [
-        "La **altura de un árbol es el nivel mas profundo** al que se puede llegar, a partir de la raíz. De manera recursiva podemos decir que la altura de un árbol (a partir de un nodo n) es la mayor altura de cualquiera de sus dos hijos.  **¿Puedes dar una definición recursiva para\n",
-        "esta función?.** "
+        "La **altura de un árbol es el nivel mas profundo** al que se puede llegar, a partir de la raíz. De manera recursiva podemos decir que la altura de un árbol (a partir de un nodo n) es la mayor altura de cualquiera de sus dos hijos.  $\\color{red}{¿Puedes\\,dar\\,una\\,definici\\acute{o}n\\,recursiva\\,para\\,esta\\,funci\\acute{o}n?}.$"
       ]
     },
     {
@@ -185,7 +184,7 @@
       "source": [
         "### **Operaciones sobre AB**\n",
         "\n",
-        "Dado que la definición de estructura de datos nos pide\n",
+        "Dado que la definición de $\\color{red}{estructura\\,de\\,datos}$ nos pide\n",
         "identificar el tipo de dato que almacena dicha estructura, así como las operaciones principales que se pueden realizar sobre esta, procedemos a definirlas. Las principales operaciones que se pueden realizar sobre un AB son las siguientes:"
       ]
     },
@@ -195,78 +194,27 @@
         "id": "4bq40J9k0thr"
       },
       "source": [
-        "**Crear Árbol**: formalismo para indicar que se tiene que\n",
-        "construir un AB."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "IbUEbjf80yIk"
-      },
-      "source": [
-        "**Eliminar Arbol**: elimina por completo el AB."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "WY6j86M201tS"
-      },
-      "source": [
-        "**Nivel**: calcula el nivel de un nodo."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "_t6oUyMm1Bxn"
-      },
-      "source": [
-        "**Altura**: calcula la altura a partir de un nodo."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "N16_Y-r31HQz"
-      },
-      "source": [
-        "**Insertar Nodo**: recibe un valor, guarda un valor y lo inserta en el árbol."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "IoxeCnHj1LUC"
-      },
-      "source": [
-        "**Buscar Nodo**: recibe un valor y lo busca dentro del árbol."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "aaTQF4mm1Oia"
-      },
-      "source": [
-        "**Eliminar Nodo**: recibe un valor, lo busca dentro del árbol y\n",
-        "en caso de que este contenido en el árbol, este nodo es\n",
-        "eliminado."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "koMdIOt61TMP"
-      },
-      "source": [
-        "**Recorridos**: los arboles se pueden recorrer de diferentes\n",
+        "* **Crear Árbol**: formalismo para indicar que se tiene que\n",
+        "construir un AB.\n",
+        "\n",
+        "* **Eliminar Arbol**: elimina por completo el AB.\n",
+        "\n",
+        "* **Nivel**: calcula el nivel de un nodo.\n",
+        "\n",
+        "* **Altura**: Calcula la altura a partir de un nodo.\n",
+        "\n",
+        "* **Insertar Nodo**: recibe un valor, guarda un valor y lo inserta en el árbol.\n",
+        "\n",
+        "* **Buscar Nodo**: recibe un valor y lo busca dentro del árbol.\n",
+        "\n",
+        "* **Eliminar Nodo**: recibe un valor, lo busca dentro del árbol y en caso de que este contenido en el árbol, este nodo es eliminado.\n",
+        "\n",
+        "* **Recorridos**: los arboles se pueden recorrer de diferentes\n",
         "formas, siendo las mas comunes las siguientes.\n",
         "\n",
-        "*     **EnOrden**: primero se visita el hijo izquierdo, después se visita la raíz y \u001cnalmente el hijo derecho. Tomando el árbol de la \u001cgura 2, este recorrido mostraría los datos en este orden [2,7,5,6,11,2,5,4,9]\n",
-        "*     **PreOrden**: primero se visita la raíz, después se visita el hijo izquierdo y \u001cnalmente el hijo derecho. Tomando el árbol de la \u001cgura 2, este recorrido mostraría los datos en este orden [2,7,2,6,5,11,5,9,4]\n",
-        "*     **PostOrden**: primero se visita el hijo izquierdo, después se visita el hijo derecho y \u001cnalmente la raíz. Tomando el árbol de la \u001cgura 2, este recorrido mostraría los datos en este orden [2,5,11,6,7,4,9,5,2]"
+        "  *     **EnOrden**: primero se visita el hijo izquierdo, después se visita la raíz y \u001cnalmente el hijo derecho. Tomando el árbol de la \u001cgura 2, este recorrido mostraría los datos en este orden [2,7,5,6,11,2,5,4,9]\n",
+        "  *     **PreOrden**: primero se visita la raíz, después se visita el hijo izquierdo y \u001cnalmente el hijo derecho. Tomando el árbol de la \u001cgura 2, este recorrido mostraría los datos en este orden [2,7,2,6,5,11,5,9,4]\n",
+        "  *     **PostOrden**: primero se visita el hijo izquierdo, después se visita el hijo derecho y \u001cnalmente la raíz. Tomando el árbol de la \u001cgura 2, este recorrido mostraría los datos en este orden [2,5,11,6,7,4,9,5,2]"
       ]
     },
     {
@@ -466,7 +414,7 @@
         "\n",
         "* **FE**(nodo) = 2 y **FE**(nodo.izq)=-1: se balancea con una **doble rotación a la derecha**. Primero se rota a la izquierda sobre nodo.izq y después a la derecha sobre nodo. \n",
         "\n",
-        "Es importante recalcar que cada vez que se balancea un nodo después de insertar o eliminar, potencialmente su padre será desbalanceado, es por este motivo que se tiene que **rebalancear el padre de manera recursiva y revisar los factores de equilibrio hasta llegar a la raíz**."
+        "Es importante recalcar que cada vez que se balancea un nodo después de insertar o eliminar, $\\color{red}{potencialmente\\,su\\,padre\\,ser\\acute{a}\\,desbalanceado}$, es por este motivo que se tiene que **rebalancear el padre de manera recursiva y revisar los factores de equilibrio hasta llegar a la raíz**."
       ]
     },
     {
