Creado mediante Colaboratory

--- a/AlgoritmosOrdenamiento/02_MergeQuick.ipynb
+++ b/AlgoritmosOrdenamiento/02_MergeQuick.ipynb
@@ -35,10 +35,8 @@
         "  <h1 align=\"center\"><i>Ordenamientos (análisis)</i></h1>\n",
         "  </font>\n",
         "  <font color=\"Black\" face=\"Comic Sans MS,arial\">\n",
-        "  <h5 align=\"center\"><i>Profesor: M.en.C. Miguel Angel Pérez León.</i></h5>\n",
-        "    <h5 align=\"center\"><i>Ayudante: Jesús Iván Coss Calderón.</i></h5>\n",
-        "    <h5 align=\"center\"><i>Ayudante: Mario Arturo Nieto Butron.</i></h5>\n",
-        "  <h5 align=\"center\"><i>Seminario de programación en paralelo.</i></h5>\n",
+        "  <h5 align=\"center\"><i>Profesor: M.en.C. Miguel Angel Pérez León</i></h5>\n",
+        "    <h5 align=\"center\"><i>Ayudante: Jesús Iván Coss Calderón</i></h5>\n",
         "  </font>"
       ]
     },
@@ -357,30 +355,6 @@
         "\n",
         "Dado que la función de recurrencia de *QuickSort* es idéntica a la del algoritmo *MergeSort*, el orden de complejidad al que pertenece el algoritmo *QuickSort* es idéntico al de *MergeSort*, es decir $T(n)\\in O(n\\cdot\\log_{2}n)$.\n",
         "\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "dTMtQcsc4QA8"
-      },
-      "source": [
-        "# Secuencial v.s. Paralelo\n",
-        "\n",
-        "Existen muchas restricciones y detalles a tomar en cuenta antes de comenzar con el análisis de algoritmos en paralelo, si embargo una de las más importantes es la ley de Amdahal."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "pc6ND99T6HDA"
-      },
-      "source": [
-        "## Ley de Amdahal\n",
-        "\n",
-        "Sea $f$ la fracción de operaciones en un calculo computacional que será llevado a cabo de manera secuencial, donde $0\\leq f\\leq1$. La máxima velocidad $\\Psi$ alcanzada mediante programación en paralelo con una computadora con $p$ procesadores enfocados en el mismo calculo es:\n",
-        "\n",
-        "$$\\Psi\\leq\\frac{1}{f+(1-f)/p}$$"
       ]
     },
     {
