Creado mediante Colaboratory

--- a/AlgoritmosOrdenamiento/02_MergeQuick.ipynb
+++ b/AlgoritmosOrdenamiento/02_MergeQuick.ipynb
@@ -32,38 +32,14 @@
       },
       "source": [
         "<font color=\"Teal\" face=\"Comic Sans MS,arial\">\n",
-        "  <h1 align=\"center\"><i>Ordenamientos (análisis)</i></h1>\n",
+        "  <h1 align=\"center\"><i>MergeSort y QuickSort (análisis)</i></h1>\n",
         "  </font>\n",
         "  <font color=\"Black\" face=\"Comic Sans MS,arial\">\n",
-        "  <h5 align=\"center\"><i>Profesor: M.en.C. Miguel Angel Pérez León</i></h5>\n",
-        "    <h5 align=\"center\"><i>Ayudante: Jesús Iván Coss Calderón</i></h5>\n",
+        "  <h5 align=\"center\"><i>Profesor: M.en.C. Miguel Angel Pérez León.</i></h5>\n",
+        "    <h5 align=\"center\"><i>Ayudante: Jesús Iván Coss Calderón.</i></h5>\n",
+        "    <h5 align=\"center\"><i>Ayudante: Mario Arturo Nieto Butron.</i></h5>\n",
+        "  <h5 align=\"center\"><i>Seminario de programación en paralelo.</i></h5>\n",
         "  </font>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Uf8-6ok_Q8I9"
-      },
-      "source": [
-        "#Introducción\n",
-        "\n",
-        "Los algoritmos de ordenamiento son de los algoritmos que se comienzan a estudiar cuando uno se introduce en las **ciencias de la computación**.\n",
-        "\n",
-        "Estos algoritmos se prestan ampliamente para ser analizados desde diferentes puntos de vista, tales como:\n",
-        "\n",
-        "*   **Tiempo de ejecución**, que se refiere a la cantidad de operaciones (comparaciones, intercambios de memoria, etc.) que se realizan para ordenar una colección de datos.\n",
-        "*   **Consumo de memoria**, esta parte se refiere a cuanta memoria adicional a la ya empleada para almacenar la colección de datos, se requiere para ordenar dicha colección\n",
-        "*   **Desempeño estadístico**, se cuenta con una gran cantidad de algoritmos de ordenamiento y la idea es poder clasificarlos para identificar ventajas y desventajas de cada uno, es por esto que se analiza su desempeño de forma práctica, normalmente tomando como punto de partida el peor caso o el caso promedio.\n",
-        "\n",
-        "Los algoritmos de ordenamiento son utilizados actualmente en múltiples plataformas y aplicaciones, sin embargo donde se utilizan con con mayor frecuencia es en bases de datos. Y como ya es bien conocido las bases de datos aparecen hoy en día en todos lados:\n",
-        "\n",
-        "*   Buscadores como google.\n",
-        "*   Redes sociales, facebook, twitter, etc.\n",
-        "*   Plataformas bancarias.\n",
-        "*   Sistemas médicos.\n",
-        "\n",
-        "Es por estos (y muchos otros) motivos por los cuáles es buena idea analizar este tipo de algoritmos en el seminario."
       ]
     },
     {
@@ -355,6 +331,30 @@
         "\n",
         "Dado que la función de recurrencia de *QuickSort* es idéntica a la del algoritmo *MergeSort*, el orden de complejidad al que pertenece el algoritmo *QuickSort* es idéntico al de *MergeSort*, es decir $T(n)\\in O(n\\cdot\\log_{2}n)$.\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dTMtQcsc4QA8"
+      },
+      "source": [
+        "# Secuencial v.s. Paralelo\n",
+        "\n",
+        "Existen muchas restricciones y detalles a tomar en cuenta antes de comenzar con el análisis de algoritmos en paralelo, si embargo una de las más importantes es la ley de Amdahal."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pc6ND99T6HDA"
+      },
+      "source": [
+        "## Ley de Amdahal\n",
+        "\n",
+        "Sea $f$ la fracción de operaciones en un calculo computacional que será llevado a cabo de manera secuencial, donde $0\\leq f\\leq1$. La máxima velocidad $\\Psi$ alcanzada mediante programación en paralelo con una computadora con $p$ procesadores enfocados en el mismo calculo es:\n",
+        "\n",
+        "$$\\Psi\\leq\\frac{1}{f+(1-f)/p}$$"
       ]
     },
     {
