Creado mediante Colaboratory

--- a/AlgoritmosOrdenamiento/01_Ordenamientos.ipynb
+++ b/AlgoritmosOrdenamiento/01_Ordenamientos.ipynb
@@ -32,13 +32,11 @@
       },
       "source": [
         "<font color=\"Teal\" face=\"Comic Sans MS,arial\">\n",
-        "  <h1 align=\"center\"><i>Ordenamientos (análisis)</i></h1>\n",
+        "  <h1 align=\"center\"><i>Algoritmos de Ordenamientos</i></h1>\n",
         "  </font>\n",
         "  <font color=\"Black\" face=\"Comic Sans MS,arial\">\n",
-        "  <h5 align=\"center\"><i>Profesor: M.en.C. Miguel Angel Pérez León.</i></h5>\n",
-        "    <h5 align=\"center\"><i>Ayudante: Jesús Iván Coss Calderón.</i></h5>\n",
-        "    <h5 align=\"center\"><i>Ayudante: Mario Arturo Nieto Butron.</i></h5>\n",
-        "  <h5 align=\"center\"><i>Seminario de programación en paralelo.</i></h5>\n",
+        "  <h5 align=\"center\"><i>Profesor: M.en.C. Miguel Angel Pérez León</i></h5>\n",
+        "    <h5 align=\"center\"><i>Ayudante: Jesús Iván Coss Calderón</i></h5>\n",
         "  </font>"
       ]
     },
@@ -60,8 +58,8 @@
         "\n",
         "Los algoritmos de ordenamiento son utilizados actualmente en múltiples plataformas y aplicaciones, sin embargo donde se utilizan con con mayor frecuencia es en bases de datos. Y como ya es bien conocido las bases de datos aparecen hoy en día en todos lados:\n",
         "\n",
-        "*   Buscadores como google.\n",
-        "*   Redes sociales, facebook, twitter, etc.\n",
+        "*   Buscadores como *Google*.\n",
+        "*   Redes sociales, *facebook*, *twitter*, etc.\n",
         "*   Plataformas bancarias.\n",
         "*   Sistemas médicos.\n",
         "\n",
@@ -74,7 +72,7 @@
         "id": "Z2HsvTi77D9Y"
       },
       "source": [
-        "# MergeSort\n",
+        "# *SelectionSort*\n",
         "\n",
         "El algoritmo de ordenamiento *MergeSort*, es uno de los algoritmos que se estudia con frecuencia cuando se comienza con el análisis de algoritmos.\n",
         " \n",
@@ -263,7 +261,7 @@
         "id": "qjDkvoF89_3n"
       },
       "source": [
-        "# QuickSort\n",
+        "# *InsertionSort*\n",
         "\n",
         "Otro de los algoritmos que ha mostrado un desempeño muy bueno en términos de tiempo de ejecución es el algoritmo conocido como *QuickSort*.\n",
         " \n",
@@ -365,22 +363,9 @@
         "id": "dTMtQcsc4QA8"
       },
       "source": [
-        "# Secuencial v.s. Paralelo\n",
+        "# *BubbleSort*\n",
         "\n",
         "Existen muchas restricciones y detalles a tomar en cuenta antes de comenzar con el análisis de algoritmos en paralelo, si embargo una de las más importantes es la ley de Amdahal."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "pc6ND99T6HDA"
-      },
-      "source": [
-        "## Ley de Amdahal\n",
-        "\n",
-        "Sea $f$ la fracción de operaciones en un calculo computacional que será llevado a cabo de manera secuencial, donde $0\\leq f\\leq1$. La máxima velocidad $\\Psi$ alcanzada mediante programación en paralelo con una computadora con $p$ procesadores enfocados en el mismo calculo es:\n",
-        "\n",
-        "$$\\Psi\\leq\\frac{1}{f+(1-f)/p}$$"
       ]
     },
     {
