Creado mediante Colaboratory

--- a/AlgoritmosOrdenamiento/01_Ordenamientos.ipynb
+++ b/AlgoritmosOrdenamiento/01_Ordenamientos.ipynb
@@ -32,7 +32,7 @@
       },
       "source": [
         "<font color=\"Teal\" face=\"Comic Sans MS,arial\">\n",
-        "  <h1 align=\"center\"><i>Algoritmos de Ordenamientos</i></h1>\n",
+        "  <h1 align=\"center\"><i>Algoritmos de Ordenamiento</i></h1>\n",
         "  </font>\n",
         "  <font color=\"Black\" face=\"Comic Sans MS,arial\">\n",
         "  <h5 align=\"center\"><i>Profesor: M.en.C. Miguel Angel Pérez León</i></h5>\n",
