--- a/Introduccion/01_TorresHanoi_SCP.ipynb
+++ b/Introduccion/01_TorresHanoi_SCP.ipynb
@@ -337,6 +337,23 @@
         "<img src=\"https://github.com/jugernaut/ProgramacionEnParalelo/blob/desarrollo/Imagenes/Introduccion/4discos.gif?raw=1\" width=\"550\">\n",
         "</center> \n",
         "\n",
+        "Podemos ver que se comienza a formar un patrón, o dicho de otra forma podemos pensar que **es posible medir el desempeño** de este algoritmo medíante un polinomio o función.\n",
+        "\n",
+        "Veamoslo así, el caso de 3 discos se descompone en 2 casos de 2 discos más un caso de un solo disco. El caso de 4 discos se descompone en 2 casos de 3 discos más un caso de un disco. Podemos imaginar que el caso de 5 discos se descompone en 2 casos de 4 discos más un caso de un disco.\n",
+        "\n",
+        "Completa la siguiente tabla y de ser posible define la función $T(n)$ que dado un número de discos $n$, nos devuelva el número de movimientos necesarios para completar la tarea.\n",
+        "\n",
+        "| Número de discos | Número de movimientos de discos para cada caso | \n",
+        "| :-:           |           :-:              | \n",
+        "| 1       | $T(1)=1$ | \n",
+        "| 2       | $T(2)=T(1)+T(1)+1=1+1+1=3$ |\n",
+        "| 3       | $T(3)=T(2)+T(2)+1=3+3+1=7$ |\n",
+        "| 4       | $T(4)=T(3)+T(3)+1=7+7+1=15$ |\n",
+        "| 5       | $T(5)=?$ |\n",
+        "| ..      | ........ |\n",
+        "| n       | $T(n)=?$ |\n",
+        "\n",
+        "\n",
         "## Código del algoritmo recursivo\n",
         "\n",
         "Si se programa de manera recursiva, este algoritmo usando un lenguaje de programación, el código se vería de la siguiente manera."
@@ -347,62 +364,47 @@
       "metadata": {
         "id": "HHVBXkHadoVq",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 538
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "520fba1f-5a63-4ee0-c3a6-1259c585889c"
+        "outputId": "6ddd515e-ad9d-49e8-aab0-9c7076c9084a"
       },
       "source": [
         "# Algoritmo recursivo que resuelve el problema de las torres de Hanoi\n",
         "def torre_Hanoi(discos, torre_Inicial, torre_Auxiliar, torre_Final):\n",
+        "  # caso base\n",
         "  if(discos <=  1):\n",
         "    print('Disco ' , str(discos) , \" de \" , torre_Inicial , \" a \" , torre_Final)\n",
+        "  # llamadas recursivas\n",
         "  else:\n",
         "    torre_Hanoi(discos-1, torre_Inicial, torre_Final, torre_Auxiliar)\n",
         "    print ('Disco ' , str(discos) , \" de \" , torre_Inicial , \" a \" , torre_Final)\n",
         "    torre_Hanoi(discos-1, torre_Auxiliar, torre_Inicial, torre_Final)\n",
-        "\n",
-        "discos = 5\n",
+        "# pruebas\n",
+        "discos = 4\n",
         "torre_Hanoi(discos, 'torre Inicial', 'torre Auxiliar', 'torre Final')"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Disco  1  de  torre Inicial  a  torre Final\n",
-            "Disco  2  de  torre Inicial  a  torre Auxiliar\n",
-            "Disco  1  de  torre Final  a  torre Auxiliar\n",
-            "Disco  3  de  torre Inicial  a  torre Final\n",
-            "Disco  1  de  torre Auxiliar  a  torre Inicial\n",
-            "Disco  2  de  torre Auxiliar  a  torre Final\n",
-            "Disco  1  de  torre Inicial  a  torre Final\n",
-            "Disco  4  de  torre Inicial  a  torre Auxiliar\n",
-            "Disco  1  de  torre Final  a  torre Auxiliar\n",
-            "Disco  2  de  torre Final  a  torre Inicial\n",
-            "Disco  1  de  torre Auxiliar  a  torre Inicial\n",
-            "Disco  3  de  torre Final  a  torre Auxiliar\n",
-            "Disco  1  de  torre Inicial  a  torre Final\n",
-            "Disco  2  de  torre Inicial  a  torre Auxiliar\n",
-            "Disco  1  de  torre Final  a  torre Auxiliar\n",
-            "Disco  5  de  torre Inicial  a  torre Final\n",
-            "Disco  1  de  torre Auxiliar  a  torre Inicial\n",
-            "Disco  2  de  torre Auxiliar  a  torre Final\n",
-            "Disco  1  de  torre Inicial  a  torre Final\n",
-            "Disco  3  de  torre Auxiliar  a  torre Inicial\n",
-            "Disco  1  de  torre Final  a  torre Auxiliar\n",
-            "Disco  2  de  torre Final  a  torre Inicial\n",
-            "Disco  1  de  torre Auxiliar  a  torre Inicial\n",
-            "Disco  4  de  torre Auxiliar  a  torre Final\n",
-            "Disco  1  de  torre Inicial  a  torre Final\n",
-            "Disco  2  de  torre Inicial  a  torre Auxiliar\n",
-            "Disco  1  de  torre Final  a  torre Auxiliar\n",
-            "Disco  3  de  torre Inicial  a  torre Final\n",
-            "Disco  1  de  torre Auxiliar  a  torre Inicial\n",
-            "Disco  2  de  torre Auxiliar  a  torre Final\n",
-            "Disco  1  de  torre Inicial  a  torre Final\n"
-          ],
-          "name": "stdout"
+            "Disco  1  de  torre Inicial  a  torre Auxiliar\n",
+            "Disco  2  de  torre Inicial  a  torre Final\n",
+            "Disco  1  de  torre Auxiliar  a  torre Final\n",
+            "Disco  3  de  torre Inicial  a  torre Auxiliar\n",
+            "Disco  1  de  torre Final  a  torre Inicial\n",
+            "Disco  2  de  torre Final  a  torre Auxiliar\n",
+            "Disco  1  de  torre Inicial  a  torre Auxiliar\n",
+            "Disco  4  de  torre Inicial  a  torre Final\n",
+            "Disco  1  de  torre Auxiliar  a  torre Final\n",
+            "Disco  2  de  torre Auxiliar  a  torre Inicial\n",
+            "Disco  1  de  torre Final  a  torre Inicial\n",
+            "Disco  3  de  torre Auxiliar  a  torre Final\n",
+            "Disco  1  de  torre Inicial  a  torre Auxiliar\n",
+            "Disco  2  de  torre Inicial  a  torre Final\n",
+            "Disco  1  de  torre Auxiliar  a  torre Final\n"
+          ]
         }
       ]
     },
@@ -451,7 +453,7 @@
         "id": "XkAP9DWqYoDR"
       },
       "source": [
-        "## Demostración del orden de complejidad al que pertenece este algoritmo\n",
+        "## Demostración\n",
         "\n",
         "Sea $T(n)$ el número de movimientos que le toma al algoritmo anterior cumplir con su objetivo y dada la función de recurrencia P.D. $T(n)=2^{n}-1$.\n",
         "\n",
@@ -481,9 +483,17 @@
         "\n",
         "La cota superior asintótica (O grande) es una forma de clasificar a los algoritmos de acuerdo a su comportamiento y desempeño.\n",
         "\n",
-        "Se usa en todas las ramas de las ciencias de computación ya que con base en esta medida (y algunas otras) podemos identificar que tan bueno o malo es nuestro algoritmo comparado con otros.\n",
+        "Se usa en todas las ramas de las ciencias de computación ya que con base en esta medida (y algunas otras) podemos identificar que tan bueno o malo es nuestro algoritmo comparado con otros.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "emWRB_vys8cR"
+      },
+      "source": [
+        "## Definición\n",
         "\n",
-        "## Definición.\n",
         "Cota superior asintótica: sea $g\\left(x\\right)$ una función continua y $f\\left(x\\right)$ la función que describe el comportamiento de nuestro algoritmo, diremos que $f$ pertenece al orden $g$ si.\n",
         "\n",
         "$$O\\left(g\\left(x\\right)\\right)=\\left\\{ f\\left(x\\right)\\colon\\exists\\,x_{0},c>0\\mid\\forall x\\geq x_{0}>0\\colon0\\leq\\left|f\\left(x\\right)\\right|\\leq c\\left|g\\left(x\\right)\\right|\\right\\} $$\n",
@@ -492,6 +502,30 @@
         "<img src=\"https://github.com/jugernaut/ProgramacionEnParalelo/blob/desarrollo/Imagenes/Introduccion/cota.png?raw=1\" width=\"550\">\n",
         "</center> \n",
         "\n",
+        "Como te podrás dar cuenta, la cota superior asintótica nos sirve\n",
+        "para definir categorías (orden de complejidad) dentro del\n",
+        "desempeño de los mucho algoritmos existentes. Y esto sirve\n",
+        "para poder identificar cuales algoritmos son más eficientes que\n",
+        "otros.\n",
+        "\n",
+        "| orden de Complejidad        | Nombre            | \n",
+        "| :-:           |    :-:        | \n",
+        "| $O(1) $       | Orden constante | \n",
+        "| $O(log n) $   | Orden logarítmico     |\n",
+        "| $O(n) $       | Orden lineal      |\n",
+        "| $O(n log n) $ | Orden n log n      | \n",
+        "| $O( n^{2}) $  | Orden cuadrático      | \n",
+        "| $O( n^{a}) $  | Orden polinomial ($a>2$)     | \n",
+        "| $O( a^{n}) $  | Orden exponencial ($a>2$)     | \n",
+        "| $O( n!)    $  | Orden factorial      | "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_-I6WPXGtOMt"
+      },
+      "source": [
         "## Orden de complejidad computacional\n",
         "\n",
         "Dada la demostración anterior podemos concluir que el orden complejidad al que pertenece este algoritmo es exponencial.\n",
@@ -502,7 +536,7 @@
         "\n",
         "<center>\n",
         "<img src=\"https://github.com/jugernaut/ProgramacionEnParalelo/blob/desarrollo/Imagenes/Introduccion/complejidad.png?raw=1\" width=\"550\">\n",
-        "</center> \n"
+        "</center> "
       ]
     },
     {
@@ -561,7 +595,7 @@
         "\n",
         "interact(cotaSuperior, c=widgets.IntSlider(min=-1,max=3,step=1,value=1))"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
