Creado mediante Colaboratory

--- a/Introduccion/01_TorresHanoi_SCP.ipynb
+++ b/Introduccion/01_TorresHanoi_SCP.ipynb
@@ -383,7 +383,7 @@
         "discos = 4\n",
         "torre_Hanoi(discos, 'torre Inicial', 'torre Auxiliar', 'torre Final')"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -675,7 +675,8 @@
         "*   Thomas H. Cormen, Introduction to Algorithms.\n",
         "*   Libro Web, Introduccion a Python.\n",
         "*   Daniel T. Joyce, Object-Oriented Data Structures.\n",
-        "*   John C. Mitchell, Concepts in programing Languages."
+        "*   John C. Mitchell, Concepts in programing Languages.\n",
+        "*   [Hanoi en linea](https://www.mathplayground.com/logic_tower_of_hanoi.html)."
       ]
     }
   ]
