Creado mediante Colaboratory

--- a/AlgoritmosOrdenamiento/01_Ordenamientos.ipynb
+++ b/AlgoritmosOrdenamiento/01_Ordenamientos.ipynb
@@ -59,11 +59,11 @@
         "Los algoritmos de ordenamiento son utilizados actualmente en múltiples plataformas y aplicaciones, sin embargo donde se utilizan con con mayor frecuencia es en bases de datos. Y como ya es bien conocido las bases de datos aparecen hoy en día en todos lados:\n",
         "\n",
         "*   Buscadores como *Google*.\n",
-        "*   Redes sociales, *facebook*, *twitter*, etc.\n",
+        "*   Redes sociales, *Facebook*, *Twitter*, etc.\n",
         "*   Plataformas bancarias.\n",
         "*   Sistemas médicos.\n",
         "\n",
-        "Es por estos (y muchos otros) motivos por los cuáles es buena idea analizar este tipo de algoritmos en el seminario."
+        "Es por estos (y muchos otros) motivos por los cuáles es buena idea analizar este tipo de algoritmos en el curso."
       ]
     },
     {
@@ -72,22 +72,44 @@
         "id": "Z2HsvTi77D9Y"
       },
       "source": [
-        "# *SelectionSort*\n",
+        "# Ordenamiento por selección *(InsertionSort)*\n",
         "\n",
-        "El algoritmo de ordenamiento *MergeSort*, es uno de los algoritmos que se estudia con frecuencia cuando se comienza con el análisis de algoritmos.\n",
-        " \n",
-        "La estrategia principal de este algoritmo de ordenamiento es la conocida como \"divide y venceras\". Inicialmente se tiene un conjunto o estructura de datos (lista, vector, arreglo, etc) de tamaño $n$ que se encuentran desordenados y que mediante algún atributo podemos ordenar, la idea de este algoritmo es la siguiente:\n",
+        "Este es uno de los algoritmos básicos y más sencillos de entender ya que funciona de manera similar a la forma en la que ordenamos un conjunto de libros, maso de cartas o cualquier elemento que pueda ser ordenado, ya que consiste en ir insertando cada uno de los elementos en su posición adecuada."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QpBGsSnzV92u"
+      },
+      "source": [
+        "## Descripción\n",
         "\n",
-        "1.   Partir el conjunto en 2 subconjuntos de tamaño $\\frac{n}2$.\n",
-        "2.   Posteriormente volver a dividir estos en 4 subconjuntos de tamaño $\\frac{n}4$, se repite este proceso hasta que se tienen subconjuntos de tamaño 2.\n",
-        "3.   Ya que se tienen conjuntos de tamaño a lo mas 2, se ordenan de manera individual cada uno de ellos.\n",
-        "4.   Cada uno de estos subconjuntos ordenados se mezclan de manera recursiva y ordenada, hasta que todo el conjunto de datos se encuentran ordenados.\n",
+        "1.   Comenzamos con un solo elemento (del conjunto a ordenar), por lo tanto asumimos que ese elemento ya se encuentra en la posición correcta.\n",
+        "2.   Posteriormente ya que se tienen $k$ elementos ordenados tomamos al elemento $k+1$, lo comparamos con todos los elementos ya ordenados y se identifica la posición en la que debe insertarse este elemento.\n",
+        "3.   Se inserta el elemento $k+1$ en la posición correspondiente y el resto de elementos se desplazan un lugar.\n",
+        "4.   Una vez que se ha repetido este proceso con todos los elementos a ordenar, podemos garantizar que el conjunto ya ha sido ordenado.\n",
         "\n",
         "<center>\n",
-        "<img src=\"https://github.com/jugernaut/ProgramacionEnParalelo/blob/desarrollo/Imagenes/Introduccion/merge.gif?raw=1\" width=\"550\">\n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosOrdenamiento/insertion.gif?raw=1\" width=\"550\">\n",
         "</center> \n",
         "\n",
-        "Dado estos antecedentes procedemos a definir la función de recurrencia, para poder identificar a que orden de complejidad pertenece este algoritmo recursivo."
+        "Una vez que se comprendió el funcionamiento del algoritmo, sería buena idea plantearnos un par de preguntas, ¿cúal es su implementación en *python*?, ¿cúal es el peor caso para este algoritmo? y ¿a qué orden de complejidad pertenece este algoritmo?."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "H9hke1e7YzJW"
+      },
+      "source": [
+        "## Pseudocódigo\n",
+        "\n",
+        "El pseudocódigo de este algoritmo se vería de la siguiente forma\n",
+        "\n",
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosOrdenamiento/pseudoinsertion.png?raw=1\" width=\"550\">\n",
+        "</center> "
       ]
     },
     {
@@ -96,15 +118,17 @@
         "id": "mlm6KfnURLCA"
       },
       "source": [
-        "## Análisis\n",
+        "## Análisis (sobre el tiempo de ejecución)\n",
         "\n",
-        "Para el caso cuando se requiere ordenar una colección (lista) de tamaño 1 (o 0 caso trivial), basta con devolver dicha lista ya que esta ya esta ordenada, lo cual toma tiempo constante, digamos $b$.\n",
+        "Para llevar a cabo el análisis de la complejidad de este algoritmo, primero es necesario responder la pregunta **¿cuál es el peor caso para este algoritmo?**, es decir, en qué situación a este algoritmo le tomaría el mayor número de operaciones para ordenar el conjunto.\n",
         "\n",
-        "Para el caso de una colección de tamaño 2 ó mayor, es necesario partir a la mitad dicha colección, ordenar ambas subcolecciones y mezclarlas. Ahora consideremos que para simplificar el análisis de la complejidad diremos que $a$ es el tiempo que toma al microprocesador realizar una operación.\n",
+        "Pensemos lo siguiente, si el conjunto a ordenar ya se encuentra ordenado entonces este algoritmo ya no realiza operación alguna, por lo tanto este es el \"mejor\" caso para este algoritmo.\n",
         "\n",
-        "Es por esto que ordenar una colección de tamaño $n$ tomará en total.\n",
+        "Ahora, si la mitad de elementos ya se encuentran ordenados de mayor a menor, y el resto de los elementos a ordenar se encuentran ordenados de menor a mayor, es decir en **orden inverso**, dada la naturaleza de este algoritmo, cada uno de estos elementos ordenados de manera inversa tiene que recorrer todos y cada uno de los elementos ordenados.\n",
         "\n",
-        "$$2T(\\frac{n}{2})+a\\cdot n$$\n",
+        "Finalmete, si todo el conjunto a ordenar se encuentra ordenado de manera inversa a como se busca, este algoritmo alcanza el máximo número de operaciones a realizar, es decir, **el peor caso**.\n",
+        "\n",
+        "Una vez identificado el peor caso, ahora veamos que sucede conforme el tamaño del conjunto a ordenar crece, en otras palabras, ¿qué sucede con $T(n)$, conforme incrementamos $n$?.\n",
         "\n"
       ]
     },
@@ -114,67 +138,45 @@
         "id": "eEEEkd74Ra-s"
       },
       "source": [
-        "## Algoritmo básico\n",
+        "## Número de operaciones\n",
         "\n",
-        "A continuación se muestra el pseudocódigo del algoritmo para ordenar por mezcla.\n",
+        "El caso trivial es cuando $n\\leq1$, en este caso el agoritmo no realiza operación alguna solo se devuelve el mismo conjunto, por lo tanto $T(1)=0$\n",
         "\n",
-        "<center>\n",
-        "<img src=\"https://github.com/jugernaut/Numerico2021/blob/master/Imagenes/Merge/merge.PNG?raw=1\" width=\"600\"> \n",
-        "</center>"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "CdKfAPmTIUP7",
-        "outputId": "d1d1b098-350c-44e5-b589-926b165aaa9a"
-      },
-      "source": [
-        "# Algoritmo de ordenamiento\n",
-        "def mergeSort(lista):\n",
-        "    # si la coleccion es de tamano 1 o 0 se devuelve\n",
-        "    if (len(lista) < 2):\n",
-        "        return lista # 1 operacion\n",
-        "    # si no se parte la coleccion y se ordena recursivamente    \n",
-        "    else:\n",
-        "        medio = len(lista)//2\n",
-        "        izquierda = mergeSort(lista[:medio]) #T(n/2)\n",
-        "        derecha = mergeSort(lista[medio:])  #T(n/2)\n",
-        "        # se mezclan ambas listas (n operaciones)\n",
-        "        return merge(izquierda, derecha)\n",
+        "Supongamos que tenemos un conjunto de 2 elementos a ordenar, es decir $n=2$ y además estos elementos se encuetran en orden inverso. De acuerdo a la definición de este algoritmo, el primer elemento, digamos el elemento $k$ ya se encuentra en su posición y no hace falta realizar operación alguna, sin embargo el segundo elemento ($k+1$) tiene que compararse con el elemento $k$ y ademas recorrerlo una posicón a la derecha, finalmente se devuelve el conjunto orenado, por lo tanto $T(2)=1$.\n",
         "\n",
-        "# Algoritmo que mezcla 2 listas ordenadas\n",
-        "def merge(l1, l2):\n",
-        "    i,j=0,0\n",
-        "    mezcla=[]\n",
-        "    # mientras haya elementos, se comparan y se mezclan\n",
-        "    while(i < len(l1) and j < len(l2)):\n",
-        "        if l1[i] <= l2[j]:\n",
-        "            mezcla.append(l1[i])\n",
-        "            i = i+1\n",
-        "        else:\n",
-        "            mezcla.append(l2[j])\n",
-        "            j = j+1  \n",
-        "    # agrega lo que falta, si i o j ya son len(lista) no agregan\n",
-        "    mezcla += l1[i:]\n",
-        "    mezcla += l2[j:]\n",
-        "    # se devuelve la coleccion ordenada\n",
-        "    return mezcla\n",
+        "Para el caso en el que $n=3$ se presenta el caso $T(2)$ ya que tenemos que ordenar los 2 primeros elementos del conjunto y además tenemos que comparar al elemento $k+3$ contra todos los ya ordenados y ademas recorrer a todos los elementos ordenados previamente, por lo tanto $T(3)=T(2)+2=1+2=3$.\n",
         "\n",
-        "print(mergeSort([2,8,5,3,9,4,1,7]))"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[1, 2, 3, 4, 5, 7, 8, 9]\n"
-          ],
-          "name": "stdout"
-        }
+        "Cuando $n=4$ se presenta el caso $T(3)$ ya que tenemos que ordenar los 3 primeros elementos del conjunto y además tenemos que comparar al elemento $k+4$ contra todos los ya ordenados y ademas recorrer a todos los elementos ordenados previamente, por lo tanto $T(4)=T(3)+3=3+3=6$.\n",
+        "\n",
+        "Si pensamos que el conjunto contiene $n$ elementos ordenados de manera inversa, entonces el tiempo (número de operaciones) que le tomará a este algorimto ordenar el conjunto está dada por la expresión recursiva.\n",
+        "\n",
+        "$$T(n)=T(n-1)+n-1$$\n",
+        "\n",
+        "O si lo prefieres ver de otra forma.\n",
+        "\n",
+        "$$1+2+3+\\cdots+n-1$$\n",
+        "\n",
+        "En forma compacta esa serie se ve de la siguiente forma.\n",
+        "\n",
+        "$$\\sum_{i=1}^{n-1}i$$\n",
+        "\n",
+        "A esta serie se le conoce como la suma de los primeros $n-1$ números naturales y tiende al valor.\n",
+        "\n",
+        "$$T(n)=1+2+3+\\cdots+n-1=\\sum_{i=1}^{n-1}i=\\frac{n(n-1)}{2}\\tag{1}$$\n",
+        "\n",
+        "Visto de otra forma la ecuación (1) la podemos ver de esta forma.\n",
+        "\n",
+        "$$\\frac{n(n-1)}{2}=\\frac{n²-n}{2}=\\frac{n²}{2}-\\frac{n}{2}\\tag{2}$$\n",
+        "\n",
+        "De la ecuación (2) la expresión que crece de manera más rápida es $\\frac{n²}{2}$, de tal manera que basta con acotar esta función para encontrar la cota superior asintótica de este algoritmo, ademas.\n",
+        "\n",
+        "$$\\frac{n²}{2}=\\frac{1}{2}n²$$\n",
+        "\n",
+        "Por lo tanto, ada la definición de Complejidad Computacional y en particular de Cota Superior Asintótica, y considerando que $c=\\frac{1}{2}$ y $g(n)=n²$ podemos concluir que.\n",
+        "\n",
+        "$$T(n)\\in n^{2}$$\n",
+        "\n",
+        "En otras palabras, **el algoritmo InsertionSort pertenece al orden de complejidad cuadrático**, respecto al tiempo o número de operaciones.\n"
       ]
     },
     {
