--- a/AlgoritmosOrdenamiento/01_Ordenamientos.ipynb
+++ b/AlgoritmosOrdenamiento/01_Ordenamientos.ipynb
@@ -164,6 +164,8 @@
         "\n",
         "$$T(n)=1+2+3+\\cdots+n-1=\\sum_{i=1}^{n-1}i=\\frac{n(n-1)}{2}\\tag{1}$$\n",
         "\n",
+        "Para una mejor comprensión del tema de series, revisar este [enlace](https://colab.research.google.com/github/jugernaut/Prometeo/blob/master/01_Calculo/06_Series/01_Series.ipynb).\n",
+        "\n",
         "Visto de otra forma la ecuación (1) la podemos ver de esta forma.\n",
         "\n",
         "$$\\frac{n(n-1)}{2}=\\frac{n²-n}{2}=\\frac{n²}{2}-\\frac{n}{2}\\tag{2}$$\n",
