Creado mediante Colaboratory

--- a/AlgoritmosOrdenamiento/01_Ordenamientos.ipynb
+++ b/AlgoritmosOrdenamiento/01_Ordenamientos.ipynb
@@ -138,7 +138,7 @@
         "id": "eEEEkd74Ra-s"
       },
       "source": [
-        "## Número de operaciones\n",
+        "### Número de operaciones\n",
         "\n",
         "El caso trivial es cuando $n\\leq1$, en este caso el agoritmo no realiza operación alguna solo se devuelve el mismo conjunto, por lo tanto $T(1)=0$\n",
         "\n",
@@ -174,7 +174,7 @@
         "\n",
         "$$\\frac{n²}{2}=\\frac{1}{2}n²$$\n",
         "\n",
-        "Por lo tanto, ada la definición de Complejidad Computacional y en particular de Cota Superior Asintótica, y considerando que $c=\\frac{1}{2}$ y $g(n)=n²$ podemos concluir que.\n",
+        "Por lo tanto, dada la definición de Complejidad Computacional, en particular la definición de **Cota Superior Asintótica** y considerando que $c=\\frac{1}{2}$ y $g(n)=n²$ podemos concluir que.\n",
         "\n",
         "$$T(n)\\in n^{2}$$\n",
         "\n",
