Creado mediante Colaboratory

--- a/AlgoritmosOrdenamiento/01_Ordenamientos.ipynb
+++ b/AlgoritmosOrdenamiento/01_Ordenamientos.ipynb
@@ -72,7 +72,7 @@
         "id": "Z2HsvTi77D9Y"
       },
       "source": [
-        "# Ordenamiento por selección *(InsertionSort)*\n",
+        "# Ordenamiento por inserción *(InsertionSort)*\n",
         "\n",
         "Este es uno de los algoritmos básicos y más sencillos de entender ya que funciona de manera similar a la forma en la que ordenamos un conjunto de libros, maso de cartas o cualquier elemento que pueda ser ordenado, ya que consiste en ir insertando cada uno de los elementos en su posición adecuada."
       ]
@@ -187,9 +187,9 @@
         "id": "qjDkvoF89_3n"
       },
       "source": [
-        "# Ordenamiento por insersión *InsertionSort*\n",
+        "# Ordenamiento por selección *(SelectionSort)*\n",
         "\n",
-        "Otro de los algoritmos básicos para ordenar un conjunto de elementos es el conocido como InsertionSort o ordenamiento por insersión.\n",
+        "Otro de los algoritmos básicos para ordenar un conjunto de elementos es el conocido como SelectionSort o ordenamiento por selección.\n",
         "\n",
         "La idea de este algoritmo, es recorrer el conjunto de elementos a ordenar y tomarse el menor (o el mayor dependiendo del orden que se busque), una vez identificado el menor se recorre a la primera posición de la lista o conjunto a ordenar, se busca el siguiente menor y se repite el proceso colocandolo en la segunda posición de la lista. Y se repite el proceso hasta ordenar el conjunto completo."
       ]
