Creado mediante Colaboratory

--- a/AlgoritmosOrdenamiento/02_MergeQuick.ipynb
+++ b/AlgoritmosOrdenamiento/02_MergeQuick.ipynb
@@ -100,60 +100,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "CdKfAPmTIUP7",
-        "outputId": "d1d1b098-350c-44e5-b589-926b165aaa9a"
-      },
-      "source": [
-        "# Algoritmo de ordenamiento\n",
-        "def mergeSort(lista):\n",
-        "    # si la coleccion es de tamano 1 o 0 se devuelve\n",
-        "    if (len(lista) < 2):\n",
-        "        return lista # 1 operacion\n",
-        "    # si no se parte la coleccion y se ordena recursivamente    \n",
-        "    else:\n",
-        "        medio = len(lista)//2\n",
-        "        izquierda = mergeSort(lista[:medio]) #T(n/2)\n",
-        "        derecha = mergeSort(lista[medio:])  #T(n/2)\n",
-        "        # se mezclan ambas listas (n operaciones)\n",
-        "        return merge(izquierda, derecha)\n",
-        "\n",
-        "# Algoritmo que mezcla 2 listas ordenadas\n",
-        "def merge(l1, l2):\n",
-        "    i,j=0,0\n",
-        "    mezcla=[]\n",
-        "    # mientras haya elementos, se comparan y se mezclan\n",
-        "    while(i < len(l1) and j < len(l2)):\n",
-        "        if l1[i] <= l2[j]:\n",
-        "            mezcla.append(l1[i])\n",
-        "            i = i+1\n",
-        "        else:\n",
-        "            mezcla.append(l2[j])\n",
-        "            j = j+1  \n",
-        "    # agrega lo que falta, si i o j ya son len(lista) no agregan\n",
-        "    mezcla += l1[i:]\n",
-        "    mezcla += l2[j:]\n",
-        "    # se devuelve la coleccion ordenada\n",
-        "    return mezcla\n",
-        "\n",
-        "print(mergeSort([2,8,5,3,9,4,1,7]))"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[1, 2, 3, 4, 5, 7, 8, 9]\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "A8nU41pJRxKf"
@@ -262,15 +208,7 @@
       "source": [
         "## Análisis\n",
         "\n",
-        "Para el caso cuando se requiere ordenar una colección (lista) de tamaño 1 (o 0 caso trivial), basta con devolver dicha lista ya que esta ya esta ordenada, lo cual toma tiempo constante, digamos $b$, podemos pensar que este valor $b$ **es el tiempo que le toma al microprocesador de propósito general ejecutar la instrucción** *return*.\n",
-        "\n",
-        "Para el caso de una colección de tamaño 2 ó mayor, es necesario partir a la mitad dicha colección, ordenar ambas subcolecciones y mezclarlas. Ahora consideremos que para simplificar el análisis de la complejidad diremos que $a$ es el **tiempo que toma al microprocesador realizar una operación lógica o aritmética**.\n",
-        "\n",
-        "Es por esto que ordenar una colección de tamaño $n$ tomará en total.\n",
-        "\n",
-        "$$2T(\\frac{n}{2})+a\\cdot n$$\n",
-        "\n",
-        "Similar al tiempo que le toma ordenar una colección al algoritmo MergeSort."
+        "Hint, para identificar el peor caso es necesario prestar especial atención al pivote."
       ]
     },
     {
@@ -329,7 +267,7 @@
       "source": [
         "## Orden de complejidad (cota superior asintótica)\n",
         "\n",
-        "Dado que la función de recurrencia de *QuickSort* es idéntica a la del algoritmo *MergeSort*, el orden de complejidad al que pertenece el algoritmo *QuickSort* es idéntico al de *MergeSort*, es decir $T(n)\\in O(n\\cdot\\log_{2}n)$.\n",
+        "Se deja como ejercicio al lector.\n",
         "\n"
       ]
     },
